--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <!-- Add your image with class="box2d" -->
-  <img src="girl.jpg" class="box2d" alt="Gravity Girl">
+  <img src="https://www.canva.com/design/DAGs3fOY4S0/x4EI_z6EZQcPhcEnAk7zPQ/view?utm_content=DAGs3fOY4S0&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=hf5923011b9" class="box2d" alt="Gravity Girl">
   <!-- Optionally add text or other .box2d elements -->
   <h1 class="box2d">Hello Gravity</h1>
 
