--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>My Gravity Page</title>
+  <title>My AIRDRIE LIBRARY BEAUTY</title>
   <style>
     body { height: 100vh; margin:0; overflow:hidden; }
     img.box2d { position:absolute; width:200px; /* or size you want */ }
@@ -12,7 +12,7 @@
   <!-- Add your image with class="box2d" -->
   <img src="https://www.canva.com/design/DAGs3fOY4S0/x4EI_z6EZQcPhcEnAk7zPQ/view?utm_content=DAGs3fOY4S0&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=hf5923011b9" class="box2d" alt="Gravity Girl">
   <!-- Optionally add text or other .box2d elements -->
-  <h1 class="box2d">Hello Gravity</h1>
+  <h1 class="box2d">HELLO LIBRARY GIRL</h1>
 
   <!-- Include physics scripts -->
   <script src="box‑2d.js"></script>
