--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
 </head>
 <body>
   <!-- Add your image with class="box2d" -->
-  <img src="https://www.canva.com/design/DAGs3fOY4S0/x4EI_z6EZQcPhcEnAk7zPQ/view?utm_content=DAGs3fOY4S0&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=hf5923011b9" class="box2d" alt="Gravity Girl">
+  <img src="<div style="position: relative; width: 100%; height: 0; padding-top: 175.3507%;
+ padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
+ border-radius: 8px; will-change: transform;">
+  <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+    src="https://www.canva.com/design/DAGs3fOY4S0/LDolpOZ0x3oOx31JlKcizg/view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
+  </iframe>
+</div>
+<a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAGs3fOY4S0&#x2F;LDolpOZ0x3oOx31JlKcizg&#x2F;view?utm_content=DAGs3fOY4S0&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">Design</a> by Ali Khan" class="box2d" alt="Gravity Girl">
   <!-- Optionally add text or other .box2d elements -->
   <h1 class="box2d">HELLO LIBRARY GIRL</h1>
 
