--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <!-- Add your image with class="box2d" -->
-  <img src="C:\Users\airdstu10\Downloads" class="box2d" alt="Gravity Girl">
+  <img src="file:///C:/Users/airdstu10/Downloads/101.png" class="box2d" alt="Gravity Girl">
   <!-- Optionally add text or other .box2d elements -->
   <h1 class="box2d">Hello Gravity</h1>
 
