--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <!-- Add your image with class="box2d" -->
-  <img src="101.png" class="box2d" alt="Gravity Girl">
+  <img src="https://github.com/habib9009220/habib9009220.github.io/blob/48af818ba8dd06fb249a7ffdc3322c82645f785e/101.png" class="box2d" alt="Gravity Girl">
   <!-- Optionally add text or other .box2d elements -->
   <h1 class="box2d">Hello Gravity</h1>
 
